# airbnb-clone-backend

./: db.sqlite3  pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  apps.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: models.py  views.py
experiences/migrations/: 0001_initial.py  0002_alter_experience_category_alter_experience_host_and_more.py  0002_experience_category.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py
medias/: models.py  serializers.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_room_amenities_alter_room_category_and_more.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py
rooms/templates/: all_rooms.html
tweets/: admin.py  models.py  tests.py  urls.py  views.py
users/: admin.py  models.py  urls.py  views.py
wishlists/: models.py
(+6 files in other folders)
